--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The back-end for the zero waste web application.",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "BR MF",
