--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "zero-waste-back-end",
   "version": "1.0.0",
   "description": "The back-end for the zero waste web application.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
