--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.4",
+    "multer": "^1.4.4",
     "socket.io": "^4.4.1",
     "vuex": "^4.0.2"
   },
